# rspell

./: Cargo.toml  README.md
dictionaries/: test.txt
src/: main.rs
src/dictionaries/: custom.txt  typescript.txt
src/parsing/: mod.rs  parser.rs  word_separator.rs
testfiles/: typo.ts
