[package]
name = "rspell"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
anyhow = { version = "1.0.98" }
glob = "0.3.2"
tree-sitter = "0.25.6"
tree-sitter-typescript = { version = "0.23.2" }
codespan-reporting = "0.12.0"
rayon = "1.10.0"
unicode-segmentation = "1.12.0"
